# morphik-core

./: .env.example  .gitignore  .pre-commit-config.yaml  .talismanrc  CLAUDE.md  README.md  WORKFLOW.md  docker-compose.yml  dockerfile  dockerfile.ui  init.sql  morphik.toml  postgres.dockerfile  pyproject.toml  requirements.txt  sync-upstream.sh
.github/workflows/: docker-build.yml  docker-publish.yml
core/: api.py  config.py
core/completion/: litellm_completion.py
core/database/: postgres_database.py
core/embedding/: litellm_embedding.py
core/models/: rules.py
core/parser/: morphik_parser.py
core/parser/video/: parse_video.py
core/services/: app_provisioning_service.py  document_service.py  entity_resolution.py  graph_service.py  telemetry.py  user_service.py
ee/routers/: apps.py
ee/ui-component/: package.json
ee/ui-component/components/chat/: ChatSection.tsx  ChatSidebar.tsx
ee/ui-component/components/documents/: DocumentDetail.tsx
ee/ui-component/hooks/: useChatSessions.ts
embedding-api/: .env.example  .gitignore  Dockerfile  README.md  colpali-modal-deployment.md  colpali_modal_app.py  docker-compose.yml  embedding_service.py  integration_test.py  plan.md  pyproject.toml  requirements.txt  start_service.sh  test_api.py
scripts/: generate_init_sql.py
